<resources>
    <string name="app_name">Rick And Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="species">Species:</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="episodes">Episodes:</string>
    <string name="characters">Characters</string>
    <string name="character_detail">Character Detail</string>
    <string name="error_fetching">Error al llamar al API</string>
    <string name="error_email_password">Correo o contraseña incorrecta</string>
    <!-- Log in Text-->
    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo</string>
    <string name="my_email">arg211024@uvg.edu.gt</string>
    <!-- Details character inputs-->
    <string name="name">Name</string>
    <string name="save">Guardar</string>
    <string name="sync">Sincronizar</string>
    <string name="delete">Eliminar</string>
    <string name="character_not_found">Error. El personaje no se encuentra en base de datos</string>
    <string name="successful_delete">Personaje eliminado con exito</string>
    <string name="successful_update">Personaje actualizado exitosamente</string>
    <string name="successful_list_update">Personajes actualizado exitosamente</string>
</resources>